gccida/g1/get_unwidened
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_unwidened/src/tree.c:4618:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_unwidened/src/tree.c:4620:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_unwidened/src/tree.c:4699:22: error: expected expression
v15 = *( tree_node **)( high + 40); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_unwidened/src/tree.c:4699:10: error: use of undeclared identifier 'tree_node'
v15 = *( tree_node **)( high + 40); 
         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_unwidened/src/obj/tree.o] Error 1
